--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div id="app">
+        <h1>Version 3</h1>
         <section class="row">
             <div class="small-6 columns">
                 <h1 class="text-center">YOU</h1>
